--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,4 @@ offer-page:
 
 feature-video:
   cta: Se video
-  url: https://www.youtube.com/watch?v=JRg0BYcitU0
+  url: https://www.youtube.com/watch?v=p5dsq0nGflk
