--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -62,6 +62,18 @@
   link: https://it.secretescapes.com/san-gemini-palace-san-gemini-umbria/sale
   domestic: true
 
+- title: Grand Hotel Palace
+  id: grand-hotel-palace
+  location: Roma, Lazio
+  description: <div>Un 5* di charme nel cuore della Città Eterna</div><div><br></div><div><br></div>
+  price: 257
+  price-description: per camera per notte
+  saved: 49
+  expires: 2019/04/16
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
+  link: https://it.secretescapes.com/grand-hotel-palace-roma-lazio/sale
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
@@ -268,4 +280,28 @@
   expires: 2019/04/16
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42673/8f084a44_fc4a_41bd_b0cb_db5494ff4bba.jpg
   link: https://it.secretescapes.com/park-hyatt-hamburg-amburgo-germania3/sale
+  domestic: false
+
+- title: Myriad by SANA
+  id: myriad-by-sana
+  location: Lisbona, Portogallo
+  description: Design d’avanguardia per il tuo city break a 5*  a Lisbona
+  price: 210
+  price-description: per camera per notte
+  saved: 23
+  expires: 2019/04/16
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91802/f94a7d0e_6c51_4121_b617_1c2089140f86.jpg
+  link: https://it.secretescapes.com/myriad-by-sana-lisbona-portogallo-ita/sale
+  domestic: false
+
+- title: Vincci The Mint
+  id: vincci-the-mint
+  location: Madrid
+  description: Hotel di design con terrazza affacciata sulla Gran Vía di Madrid
+  price: 150
+  price-description: per camera per notte
+  saved: 62
+  expires: 2019/04/16
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/30391/761e5c79_0476_4be2_92ed_783c1f697bb6.jpg
+  link: https://it.secretescapes.com/vincci-the-mint-madrid1/sale
   domestic: false
